--- a/arch/arm/dts/stm32mp257f-dk.dts
+++ b/arch/arm/dts/stm32mp257f-dk.dts
@@ -214,6 +214,8 @@
 };
 
 &dsi {
+	phy-dsi-supply =  <&scmi_vddcore>;
+	vdda18-supply = <&scmi_v1v8>;
 	status = "okay";
 
 	ports {
@@ -239,7 +241,8 @@
 &eth1 {
 	status = "okay";
 	pinctrl-0 = <&eth1_rgmii_pins_b>;
-	pinctrl-names = "default";
+	pinctrl-1 = <&eth1_rgmii_sleep_pins_b>;
+	pinctrl-names = "default", "sleep";
 	phy-mode = "rgmii-id";
 	max-speed = <1000>;
 	phy-handle = <&phy1_eth1>;
@@ -253,7 +256,7 @@
 			compatible = "ethernet-phy-id001c.c916";
 			reset-gpios =  <&gpioa 2 GPIO_ACTIVE_LOW>;
 			reset-assert-us = <10000>;
-			reset-deassert-us = <300>;
+			reset-deassert-us = <80000>;
 			realtek,eee-disable;
 			reg = <1>;
 		};
@@ -427,6 +430,14 @@
 	status = "okay";
 };
 
+/* use LPTIMER with tick broadcast for suspend mode */
+&lptimer3 {
+	status = "okay";
+	timer {
+		status = "okay";
+	};
+};
+
 &ltdc {
 	status = "okay";
 
@@ -448,7 +459,8 @@
 
 &lvds {
 	status = "okay";
-	backlight = <&panel_lvds_backlight>;
+	vdd-supply =  <&scmi_vddcore>;
+	vdda18-supply = <&scmi_v1v8>;
 	ports {
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -483,7 +495,7 @@
 	pinctrl-names = "default", "sleep";
 	pinctrl-0 = <&mdf_cck0_pins_a>;
 	pinctrl-1 = <&mdf_cck0_sleep_pins_a>;
-	#clock-cells = <1>;
+	#clock-cells = <0>;
 	clock-output-names = "cck0";
 	clock-frequency = <2048000>;
 	status = "okay";
@@ -493,20 +505,20 @@
 		pinctrl-0 = <&mdf_sdi6_pins_a>;
 		pinctrl-1 = <&mdf_sdi6_sleep_pins_a>;
 		st,sitf-mode = "spi";
-		clocks = <&mdf1 0>;
+		clocks = <&mdf1>;
 		status = "okay";
 	};
 
 	filter0: filter@84  {
 		st,cic-mode = <5>;
 		st,sitf = <&sitf6 0>;
+		st,hpf-filter-cutoff-bp = <625>;
 		status = "okay";
 
 		asoc_pdm0: mdf-dai {
 			compatible = "st,stm32mp25-mdf-dai";
 			#sound-dai-cells = <0>;
 			io-channels = <&filter0 0>;
-			st,hpf-filter-cutoff-bp = <625>;
 			power-domains = <&RET_PD>;
 			status = "okay";
 
@@ -521,13 +533,13 @@
 	filter1: filter@104  {
 		st,cic-mode = <5>;
 		st,sitf = <&sitf6 1>;
+		st,hpf-filter-cutoff-bp = <625>;
 		status = "okay";
 
 		asoc_pdm1: mdf-dai {
 			compatible = "st,stm32mp25-mdf-dai";
 			#sound-dai-cells = <0>;
 			io-channels = <&filter1 0>;
-			st,hpf-filter-cutoff-bp = <625>;
 			power-domains = <&RET_PD>;
 			status = "okay";
 
@@ -617,6 +629,10 @@
 	scmi_vddio1: regulator@0 {
 		regulator-min-microvolt = <1800000>;
 		regulator-max-microvolt = <3300000>;
+	};
+	scmi_vddcore: regulator@11  {
+		reg = <VOLTD_SCMI_STPMIC2_BUCK2>;
+		regulator-name = "vddcore";
 	};
 	scmi_v1v8: regulator@14  {
 		reg = <VOLTD_SCMI_STPMIC2_BUCK5>;
@@ -762,13 +778,5 @@
 		maximum-speed = "high-speed";
 		role-switch-default-mode = "peripheral";
 		usb-role-switch;
-	};
-};
-
-/* use LPTIMER with tick broadcast for suspend mode */
-&lptimer3 {
-	status = "okay";
-	timer {
-		status = "okay";
 	};
 };
