--- a/arch/arm/dts/stm32mp253.dtsi
+++ b/arch/arm/dts/stm32mp253.dtsi
@@ -69,9 +69,8 @@
 				#clock-cells = <0>;
 				compatible = "st,stm32-lvds";
 				reg = <0x48060000 0x2000>;
-				clocks = <&rcc CK_BUS_LVDS>, <&rcc CK_KER_LVDSPHY>,
-					 <&syscfg 0>;
-				clock-names = "pclk", "ref", "pixclk";
+				clocks = <&rcc CK_BUS_LVDS>, <&rcc CK_KER_LVDSPHY>;
+				clock-names = "pclk", "ref";
 				resets = <&rcc LVDS_R>;
 				feature-domains = <&rifsc STM32MP25_RIFSC_LVDS_ID>;
 				power-domains = <&CLUSTER_PD>;
@@ -82,8 +81,10 @@
 				compatible = "st,stm32mp25-dwmac", "snps,dwmac-5.10a";
 				reg = <0x482d0000 0x4000>;
 				reg-names = "stmmaceth";
-				interrupts-extended = <&intc GIC_SPI 133 IRQ_TYPE_LEVEL_HIGH>;
-				interrupt-names = "macirq";
+				interrupts-extended = <&intc GIC_SPI 133 IRQ_TYPE_LEVEL_HIGH>,
+						      <&exti1 70 IRQ_TYPE_LEVEL_HIGH>;
+				interrupt-names = "macirq",
+						  "eth_wake_irq";
 				clock-names = "stmmaceth",
 					      "mac-clk-tx",
 					      "mac-clk-rx",
@@ -103,6 +104,7 @@
 				snps,tso;
 				feature-domains = <&rifsc STM32MP25_RIFSC_ETH2_ID>;
 				power-domains = <&CLUSTER_PD>;
+				wakeup-source;
 				status = "disabled";
 				snps,mtl-rx-config = <&mtl_rx_setup_2>;
 				snps,mtl-tx-config = <&mtl_tx_setup_2>;
@@ -131,15 +133,9 @@
 	};
 };
 
-&dsi {
-	clocks = <&rcc CK_BUS_DSI>, <&rcc CK_KER_DSIPHY>,
-		 <&rcc CK_KER_LTDC>, <&syscfg 0>;
-	clock-names = "pclk", "ref", "px_clk", "pixclk";
-};
-
 &ltdc {
-	clocks = <&rcc CK_BUS_LTDC>, <&rcc CK_KER_LTDC>, <&syscfg 0>;
-	clock-names = "bus", "ref", "lcd";
+	clocks = <&rcc CK_BUS_LTDC>, <&rcc CK_KER_LTDC>, <&syscfg 0>, <&lvds 0>;
+	clock-names = "bus", "ref", "lcd", "lvds";
 };
 
 &optee {
