--- a/arch/arm/dts/stm32mp257.dtsi
+++ b/arch/arm/dts/stm32mp257.dtsi
@@ -22,6 +22,7 @@
 				ranges = <0x4c000000 0x4c000000 0x2000000>,
 					 <0x4b000000 0x4b000000 0xc0000>;
 				feature-domains = <&rifsc STM32MP25_RIFSC_ETHSW_DEIP_ID>;
+				power-domains = <&CLUSTER_PD>;
 				status = "disabled";
 
 				deip_sw0: deip-sw@4c000000 {
