--- a/configs/stm32mp25_defconfig
+++ b/configs/stm32mp25_defconfig
@@ -13,19 +13,25 @@ CONFIG_TARGET_ST_STM32MP25X=y
 CONFIG_CMD_STM32PROG=y
 CONFIG_SYS_LOAD_ADDR=0x84000000
 CONFIG_ENV_ADDR=0x60900000
+CONFIG_FWU_NUM_IMAGES_PER_BANK=1
 CONFIG_SYS_MEMTEST_START=0x84000000
 CONFIG_SYS_MEMTEST_END=0x88000000
 CONFIG_DISTRO_DEFAULTS=y
 CONFIG_CUSTOM_SYS_INIT_SP_ADDR=0x90000000
 CONFIG_FIT=y
+CONFIG_FIT_SIGNATURE=y
+CONFIG_LEGACY_IMAGE_FORMAT=y
 CONFIG_BOOTDELAY=1
 CONFIG_BOOTCOMMAND="run bootcmd_stm32mp"
 CONFIG_FDT_SIMPLEFB=y
+CONFIG_CMD_FWU_METADATA=y
 CONFIG_CMD_BOOTZ=y
 CONFIG_SYS_BOOTM_LEN=0x2000000
+CONFIG_CMD_BOOTEFI_SELFTEST=y
 CONFIG_CMD_ADTIMG=y
 # CONFIG_CMD_ELF is not set
 CONFIG_CMD_ERASEENV=y
+CONFIG_CMD_NVEDIT_EFI=y
 CONFIG_CMD_MEMINFO=y
 CONFIG_CMD_MEMTEST=y
 CONFIG_CMD_CLK=y
@@ -43,6 +49,7 @@ CONFIG_SYS_DISABLE_AUTOLOAD=y
 CONFIG_CMD_BMP=y
 CONFIG_CMD_CACHE=y
 CONFIG_CMD_CLS=y
+CONFIG_CMD_EFIDEBUG=y
 CONFIG_CMD_TIME=y
 CONFIG_CMD_RNG=y
 CONFIG_CMD_TIMER=y
@@ -65,7 +72,7 @@ CONFIG_ENV_UBI_VOLUME_REDUND="uboot_config_r"
 CONFIG_SYS_MMC_ENV_DEV=-1
 CONFIG_BUTTON=y
 CONFIG_BUTTON_GPIO=y
-CONFIG_SET_DFU_ALT_INFO=y
+CONFIG_DFU_TFTP=y
 CONFIG_USB_FUNCTION_FASTBOOT=y
 CONFIG_FASTBOOT_BUF_ADDR=0x84000000
 CONFIG_FASTBOOT_BUF_SIZE=0x2000000
@@ -79,6 +86,7 @@ CONFIG_FASTBOOT_MMC_USER_NAME="mmc1"
 CONFIG_FASTBOOT_CMD_OEM_FORMAT=y
 CONFIG_FASTBOOT_CMD_OEM_PARTCONF=y
 CONFIG_FASTBOOT_CMD_OEM_BOOTBUS=y
+CONFIG_FWU_MDATA=y
 CONFIG_GPIO_HOG=y
 CONFIG_DM_I2C=y
 CONFIG_SYS_I2C_STM32F7=y
@@ -163,6 +171,11 @@ CONFIG_WDT=y
 CONFIG_WDT_STM32MP=y
 CONFIG_WDT_ARM_SMC=y
 CONFIG_ERRNO_STR=y
+CONFIG_EFI_SET_TIME=y
+CONFIG_EFI_CAPSULE_ON_DISK=y
+CONFIG_EFI_CAPSULE_FIRMWARE_FIT=y
+CONFIG_EFI_SECURE_BOOT=y
 # CONFIG_LMB_USE_MAX_REGIONS is not set
 CONFIG_LMB_MEMORY_REGIONS=2
 CONFIG_LMB_RESERVED_REGIONS=32
+CONFIG_FWU_MULTI_BANK_UPDATE=y
