stm32mp25: Add a node for the FWU metadata device
The FWU metadata structure is accessed through the driver model
interface. On the stm32mp257f dk and ev1 boards, the FWU metadata is
stored on the uSD card. Add the fwu-mdata node on the u-boot specific
dtsi file for accessing the metadata structure.

Signed-off-by: Patrice Chotard <patrice.chotard@foss.st.com>
Change-Id: Iea60ab5ae3b6b99cccd6a4d68b015ec5a97351a9
Reviewed-on: https://gerrit.st.com/c/mpu/oe/st/u-boot/+/368865

--- a/arch/arm/dts/stm32mp257f-ev1-u-boot.dtsi
+++ b/arch/arm/dts/stm32mp257f-ev1-u-boot.dtsi
@@ -14,6 +14,11 @@
 		u-boot,boot-led = "led-blue";
 		u-boot,mmc-env-partition = "u-boot-env";
 	};
+
+	fwu-mdata {
+		compatible = "u-boot,fwu-mdata-gpt";
+		fwu-mdata-store = <&sdmmc1>;
+	};
 };
 
 &dwc3 {
