--- a/arch/arm/dts/stm32mp257f-dk-u-boot.dtsi
+++ b/arch/arm/dts/stm32mp257f-dk-u-boot.dtsi
@@ -10,6 +10,11 @@
 		u-boot,boot-led = "led-blue";
 		u-boot,mmc-env-partition = "u-boot-env";
 	};
+
+	fwu-mdata {
+		compatible = "u-boot,fwu-mdata-gpt";
+		fwu-mdata-store = <&sdmmc1>;
+	};
 };
 
 &dwc3 {
