--- a/arch/arm/dts/stm32mp253.dtsi
+++ b/arch/arm/dts/stm32mp253.dtsi
@@ -33,6 +33,13 @@
 		};
 	};
 
+	timer {
+		interrupts = <GIC_PPI 13 (GIC_CPU_MASK_SIMPLE(2) | IRQ_TYPE_LEVEL_LOW)>,
+			     <GIC_PPI 14 (GIC_CPU_MASK_SIMPLE(2) | IRQ_TYPE_LEVEL_LOW)>,
+			     <GIC_PPI 11 (GIC_CPU_MASK_SIMPLE(2) | IRQ_TYPE_LEVEL_LOW)>,
+			     <GIC_PPI 10 (GIC_CPU_MASK_SIMPLE(2) | IRQ_TYPE_LEVEL_LOW)>;
+	};
+
 	soc@0 {
 		rifsc: rifsc@42080000 {
 			m_can1: can@402d0000 {
@@ -61,18 +68,6 @@
 				clock-names = "hclk", "cclk";
 				bosch,mram-cfg = <0x1400 0 0 32 0 0 2 2>;
 				feature-domains = <&rifsc STM32MP25_RIFSC_FDCAN_ID>;
-				power-domains = <&CLUSTER_PD>;
-				status = "disabled";
-			};
-
-			lvds: lvds@48060000 {
-				#clock-cells = <0>;
-				compatible = "st,stm32-lvds";
-				reg = <0x48060000 0x2000>;
-				clocks = <&rcc CK_BUS_LVDS>, <&rcc CK_KER_LVDSPHY>;
-				clock-names = "pclk", "ref";
-				resets = <&rcc LVDS_R>;
-				feature-domains = <&rifsc STM32MP25_RIFSC_LVDS_ID>;
 				power-domains = <&CLUSTER_PD>;
 				status = "disabled";
 			};
@@ -131,11 +126,6 @@
 			};
 		};
 	};
-};
-
-&ltdc {
-	clocks = <&rcc CK_BUS_LTDC>, <&rcc CK_KER_LTDC>, <&syscfg 0>, <&lvds 0>;
-	clock-names = "bus", "ref", "lcd", "lvds";
 };
 
 &optee {
