--- a/arch/arm/dts/stm32mp257f-dk.dts
+++ b/arch/arm/dts/stm32mp257f-dk.dts
@@ -13,7 +13,7 @@
 #include "stm32mp257.dtsi"
 #include "stm32mp25xf.dtsi"
 #include "stm32mp25-pinctrl.dtsi"
-#include "stm32mp25xxal-pinctrl.dtsi"
+#include "stm32mp25xxak-pinctrl.dtsi"
 #include "stm32mp257f-dk-ca35tdcid-resmem.dtsi"
 
 / {
@@ -84,6 +84,14 @@
 			label = "User-2";
 			linux,code = <BTN_2>;
 			gpios = <&gpioc 11 GPIO_ACTIVE_HIGH>;
+			status = "okay";
+		};
+
+		button-wake-up {
+			label = "wake-up";
+			linux,code = <KEY_WAKEUP>;
+			interrupts-extended = <&optee 0>;
+			wakeup-source;
 			status = "okay";
 		};
 	};
@@ -158,11 +166,7 @@
 	sound {
 		compatible = "audio-graph-card";
 		label = "STM32MP25-DK";
-		routing =
-			"Playback" , "MCLK",
-			"Capture" , "MCLK",
-			"MICL" , "Mic Bias";
-		dais = <&sai1a_port &sai1b_port &i2s2_port &mdf1_port0 &mdf1_port1>;
+		dais = <&i2s2_port &mdf1_port0 &mdf1_port1>;
 		status = "okay";
 	};
 
@@ -182,6 +186,8 @@
 };
 
 &csi2host {
+	vdd-supply =  <&scmi_vddcore>;
+	vdda18-supply = <&scmi_v1v8>;
 	status = "okay";
 	ports {
 		#address-cells = <1>;
@@ -203,6 +209,14 @@
 	};
 };
 
+&crc {
+	status = "okay";
+};
+
+&cryp1 {
+	status = "okay";
+};
+
 &dcmipp {
 	status = "okay";
 	port {
@@ -214,7 +228,7 @@
 };
 
 &dsi {
-	phy-dsi-supply =  <&scmi_vddcore>;
+	vdd-dsi-supply =  <&scmi_vddcore>;
 	vdda18-supply = <&scmi_v1v8>;
 	status = "okay";
 
@@ -363,39 +377,6 @@
 		reset-gpios = <&gpioi 0 GPIO_ACTIVE_LOW>;
 		status = "okay";
 	};
-
-	cs42l51: cs42l51@4a {
-		compatible = "cirrus,cs42l51";
-		reg = <0x4a>;
-		#sound-dai-cells = <0>;
-		VL-supply = <&scmi_v3v3>;
-		VD-supply = <&scmi_v1v8>;
-		VA-supply = <&scmi_v1v8>;
-		VAHP-supply = <&scmi_v1v8>;
-		reset-gpios = <&gpiod 6 GPIO_ACTIVE_LOW>;
-		clocks = <&sai1a>;
-		clock-names = "MCLK";
-		status = "okay";
-
-		cs42l51_port: port {
-			#address-cells = <1>;
-			#size-cells = <0>;
-
-			cs42l51_tx_endpoint: endpoint@0 {
-				reg = <0>;
-				remote-endpoint = <&sai1a_endpoint>;
-				frame-master = <&cs42l51_tx_endpoint>;
-				bitclock-master = <&cs42l51_tx_endpoint>;
-			};
-
-			cs42l51_rx_endpoint: endpoint@1 {
-				reg = <1>;
-				remote-endpoint = <&sai1b_endpoint>;
-				frame-master = <&cs42l51_rx_endpoint>;
-				bitclock-master = <&cs42l51_rx_endpoint>;
-			};
-		};
-	};
 };
 
 &i2c8 {
@@ -428,14 +409,6 @@
 
 &ipcc1 {
 	status = "okay";
-};
-
-/* use LPTIMER with tick broadcast for suspend mode */
-&lptimer3 {
-	status = "okay";
-	timer {
-		status = "okay";
-	};
 };
 
 &ltdc {
@@ -582,47 +555,6 @@
 	pinctrl-0 = <&rtc_out2_rmp_pins_a>;
 	pinctrl-names = "default";
 	status = "okay";
-};
-
-&sai1 {
-	pinctrl-names = "default", "sleep";
-	pinctrl-0 = <&sai1a_pins_a>, <&sai1b_pins_a>;
-	pinctrl-1 = <&sai1a_sleep_pins_a>, <&sai1b_sleep_pins_a>;
-	status = "okay";
-
-	sai1a: audio-controller@40290004 {
-		#clock-cells = <0>;
-		dma-names = "tx";
-		status = "okay";
-
-		sai1a_port: port {
-			sai1a_endpoint: endpoint {
-				remote-endpoint = <&cs42l51_tx_endpoint>;
-				format = "i2s";
-				mclk-fs = <256>;
-				dai-tdm-slot-num = <2>;
-				dai-tdm-slot-width = <32>;
-			};
-		};
-	};
-
-	sai1b: audio-controller@40290024 {
-		dma-names = "rx";
-		st,sync = <&sai1a 2>;
-		clocks = <&rcc CK_KER_SAI1>, <&sai1a>;
-		clock-names = "sai_ck", "MCLK";
-		status = "okay";
-
-		sai1b_port: port {
-			sai1b_endpoint: endpoint {
-				remote-endpoint = <&cs42l51_rx_endpoint>;
-				format = "i2s";
-				mclk-fs = <256>;
-				dai-tdm-slot-num = <2>;
-				dai-tdm-slot-width = <32>;
-			};
-		};
-	};
 };
 
 &scmi_regu {
