--- a/configs/stm32mp25_defconfig
+++ b/configs/stm32mp25_defconfig
@@ -179,3 +179,4 @@ CONFIG_EFI_SECURE_BOOT=y
 CONFIG_LMB_MEMORY_REGIONS=2
 CONFIG_LMB_RESERVED_REGIONS=32
 CONFIG_FWU_MULTI_BANK_UPDATE=y
+CONFIG_FWU_MDATA_V2=y
